--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700;1,900&display=swap');
 
 @import url(/css/header.css);
+@import url(/css/imagens.css);
+
+
 *{
     margin: 0;
     padding: 0;
