create: section planos

--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,7 @@
 @import url(/css/header.css);
 @import url(/css/imagens.css);
 @import url(/css/ofertas.css);
+@import url(/css/planos.css);
 
 
 *{
