--- a/css/planos.css
+++ b/css/planos.css
@@ -6,6 +6,7 @@
    
 
 }
+/* titulo */
 .titulo-planos{
     display: flex;
     padding-left: 60px;
@@ -22,6 +23,7 @@
     
 
 }
+/* item plano */
 .itens-plano{
     display: flex;
     height: auto;
@@ -33,6 +35,7 @@
     margin-bottom: 80px;
 
 }
+/* info plano */
 .info-plano{
     display: flex;
     flex-direction: column;
@@ -49,6 +52,7 @@
     width: 300px;
     
 }
+/* giga telefone */
 .giga{
     margin-left: 10px;
     margin-top: 10px;
@@ -70,6 +74,7 @@
     font-weight: 700;
     padding-bottom: 20px;
 }
+/* rede social */
 .redes-social{
     padding-left: 10px;
     display: flex;
@@ -86,6 +91,7 @@
 .tiktok span{
     color: var(--white);
 }
+/* todos span rede social */
 .Whatsaap span,
 .instagram,
 .facebook span,
@@ -93,6 +99,7 @@
 .carro span{
     color: var(--white);
 }
+/* preço */
 .preço{
     display: flex;
     padding-left: 10px;
@@ -110,6 +117,7 @@
     font-weight: 300;
     padding-bottom: 20px;
 }
+/* buttom */
 .btns-plano{
     display: flex;
     padding-left: 10px;
@@ -143,6 +151,7 @@
     margin-right: 60px;
     margin-bottom: 60px;
 }
+/* titulo passaporte */
 .titulo-passaporte{
     display: flex;
     align-items: center;
@@ -152,6 +161,7 @@
     font-size: 18px;
     color: var(--white);
 }
+/* icones */
 .icone{
     display: flex;
     align-items: center;
