create: smartphone e imagens

--- a/css/global.css
+++ b/css/global.css
@@ -6,6 +6,7 @@
 @import url(/css/imagens.css);
 @import url(/css/ofertas.css);
 @import url(/css/planos.css);
+@import url(/css/smartphones.css);
 
 
 *{
