create:banada larga

--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,7 @@
 @import url(/css/ofertas.css);
 @import url(/css/planos.css);
 @import url(/css/smartphones.css);
+@import url(/css/banda-larga.css);
 
 
 *{
