--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,7 @@
 @import url(/css/planos.css);
 @import url(/css/smartphones.css);
 @import url(/css/banda-larga.css);
+@import url(/css/claro-tv.css);
 
 
 *{
