create: section vantagens

--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,7 @@
 @import url(/css/smartphones.css);
 @import url(/css/banda-larga.css);
 @import url(/css/claro-tv.css);
+@import url(/css/vantagens.css);
 
 
 *{
