--- a/css/vantagens.css
+++ b/css/vantagens.css
@@ -1,45 +1,33 @@
 
-.claro-tv{
+.vantagens{
     display: flex;
     flex-direction: column;
-
     background-color: var(--blacktotal);
 
 }
-.titulo-claro-tv{
+.titulo-vantagens{
     display: flex;
+    padding-left: 60px;
 
 }
-.titulo-claro-tv h2{
+.titulo-vantagens h2{
     font-size: 30px;
     color: var(--white);
-    padding-left: 60px;
     padding-bottom: 20px;
-}
-.img-claro{
-    display: flex;
-    column-gap: 20px;
-    padding-left: 60px;
-    padding-bottom: 40px;
-}
-.img-claro img{
-    border-radius: 8px;
 
 }
-/*  */
-.container-claro{
+/* conatiner */
+.container-vantagens{
     display: flex;
     column-gap: 20px;
-
     margin-left: 60px;
-    padding-bottom: 40px;
 }
-.itens-claro{
+.itens-vantagens{
     display: flex;
     flex-direction: column;
-   
+    
 }
-.tv{
+.megas{
     display: flex;
     flex-direction: column;
     height: 220px;
@@ -53,42 +41,37 @@
     transition: all .2s;
     cursor: pointer;
 
-    border-bottom: none;
+    /* border-bottom: none; */
 }
-.tv:hover{
+.megas:hover{
     background-color: red;
 }
-.tv span{
+.megas span{
     display: flex;
     font-size: 16px;
     color: var(--white);
     font-weight: 700;
     padding-bottom: 20px;
 }
-.tv p{
+.megas p{
     font-size: 16px;
     color: var(--white);
     padding-bottom: 20px;
-
 }
-.tv h4{
-    color: var(--white);
-    padding-bottom: 10px;
-}
-.tv img{
+/* MEGAS */
+.megas img{
     display: flex;
-    
     height: 50px;
     width: 50px;
-
 }
-/* PRICE valor */
-.price{
+/* REAIS */
+.reais{
     display: flex;
     flex-direction: column;
+
     height: auto;
-    width: 265px;
     padding-bottom: 20px;
+    width: 265px;
 
     background-color: var(--blacktotal);
     border: 1px solid var(--white);
@@ -97,25 +80,23 @@
 
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-
 }
-.price span{
+.reais span{
     font-size: 16px;
     color: var(--white);
     font-weight: 700;
 }
-.price h4{
+.reais h4{
     font-size: 20px;
     color: var(--white);
     font-weight: 900;
 
 }
-.price p{
+.reais p{
     color: var(--white);
     padding-bottom: 20px;
-
 }
-.price button{
+.reais button{
     height: 40px;
     width: 120px;
     border-radius: 20px;
@@ -130,11 +111,11 @@
     cursor: pointer;
     transition: all .2s;
 }
-.price button:hover{
+.reais button:hover{
     background-color: #b84d01;
 }
-/* DETALHES INFO */
-.info-detalhes{
+/* detalhes-plano */
+.detalhes-plano{
     display: flex;
     justify-content: space-between;
     height: 50px;
@@ -145,14 +126,30 @@
 
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    margin-bottom: 40px;
+
 }
-.info-detalhes span{
+.detalhes-plano span{
     font-size: 20px;
     color: var(--white);
     font-weight: 700;
 }
-.info-detalhes i{
+.detalhes-plano i{
     font-size: 20px;
     color: var(--white);
     font-weight: 700;
+}
+/* ICONES */
+.icones{
+    display: flex;
+    column-gap: 10px;
+}
+.icones label{
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    background-color: var(--white);
+    border-radius: 100%;
+    font-size: 20px;
+    color: var(--blacktotal);
 }
