create: section produtos

--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,8 @@
 @import url(/css/vantagens.css);
 @import url(/css/beneficio.css);
 @import url(/css/compre.css);
+@import url(/css/streaming.css);
+@import url(/css/produtos.css);
 
 *{
     margin: 0;
