--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,7 @@
 @import url(/css/compre.css);
 @import url(/css/streaming.css);
 @import url(/css/produtos.css);
+@import url(/css/acessorios.css);
 
 *{
     margin: 0;
