--- a/css/produtos.css
+++ b/css/produtos.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--blacktotal);
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 
 }
 /*  TITULO PRODUTOS */
@@ -103,6 +103,7 @@
     margin-left: 60px;
     margin-right: 60px;
     margin-top: 40px;
+    margin-bottom: 40px;
 
     border-radius: 8px;
     height: 80px;
