--- a/css/global.css
+++ b/css/global.css
@@ -15,6 +15,7 @@
 @import url(/css/streaming.css);
 @import url(/css/produtos.css);
 @import url(/css/acessorios.css);
+@import url(/css/duvidas.css);
 
 *{
     margin: 0;
