create:  section opçoes

--- a/css/global.css
+++ b/css/global.css
@@ -16,6 +16,7 @@
 @import url(/css/produtos.css);
 @import url(/css/acessorios.css);
 @import url(/css/duvidas.css);
+@import url(/css/opçoes.css);
 
 *{
     margin: 0;
