create: footer final

--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,7 @@
 @import url(/css/acessorios.css);
 @import url(/css/duvidas.css);
 @import url(/css/opçoes.css);
+@import url(/css/footer.css);
 
 *{
     margin: 0;
