config: color variaveis

--- a/css/acessorios.css
+++ b/css/acessorios.css
@@ -24,7 +24,6 @@
     display: flex;
     column-gap: 20px;
     padding-bottom: 20px;
-    
     margin-left: 60px;
 }
 .itens-acessorios{
@@ -54,7 +53,7 @@
 }
 .info-acessorios span{
     font-size: 18px;
-    color: #ff5c63;
+    color: var(--pink);
 }
 .info-acessorios h3{
     font-size: 25px;
@@ -90,12 +89,12 @@
     font-size: 16px;
     color: var(--black);
 
-    border:  1px solid #ffc772;
-    background-color: #ffc772;
+    border:  1px solid var(--btn-yellow);
+    background-color: var(--btn-yellow);
 
     cursor: pointer;
     transition: all .2s;
 }
 .dinheiro button:hover{
-    background-color: #b84d01;
+    background-color: var(--btn-secunadry-hover);
 }
