--- a/css/global.css
+++ b/css/global.css
@@ -28,6 +28,18 @@
     --white: #fff;
     --black: #1f1d1d;
     --blacktotal: #000;
+    --btn-primary: #ffc722;
+    --btn-secunadry-hover: #b84d01;
+    --btn-red: #b41e13;
+    --btn-yellow: #ffc772;
+    --btns-red-claro: #da291c;
+
+    --pink: #ff5c63;
+    --red-black: #c12911;
+
+    --btn-hover: #fb9c2d;
+
+    --color-red: #da291c;
 }
 
 
