--- a/css/header.css
+++ b/css/header.css
@@ -98,8 +98,8 @@ header{
     cursor: pointer;
 }
 .btn-contrate{
-    background-color: #ffc722;
-    border: 1px solid #ffc722;
+    background-color: var(--btn-primary);
+    border: 1px solid var(--btn-primary);
     color: var(--black);
 }
 .btn-contrate:hover{
