--- a/css/duvidas.css
+++ b/css/duvidas.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--blacktotal);
-    margin-top: 40px;
+    padding-top: 40px;
     padding-bottom: 100px;
 }
 /* TITULOS  */
