--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@
 .footer{
     display: flex;
     justify-content: space-between;
-    background-color: #da291c;
+    background-color: var(--color-red);
 }
 .itens1{
     display: flex;
