--- a/css/opçoes.css
+++ b/css/opçoes.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     padding: 10px;
-    background-color: #c12911;
+    background-color: var(--red-black);
     column-gap: 10px;
     border-bottom: 1px solid orange;
 }
@@ -25,7 +25,7 @@
 }
 .conatiner-opçoes{
     display: flex;
-    background-color: #b41e13;
+    background-color: var(--btn-red);
 }
 .acesso{
     display: flex;
