--- a/css/planos.css
+++ b/css/planos.css
@@ -60,17 +60,17 @@
 .giga span{
     display: flex;
     font-size: 18px;
-    color: white;
+    color: var(--white);
     margin-bottom: 10px;
 
 }
 .giga p{
     font-size: 16px;
-    color: white;
+    color: var(--white);
 }
 .giga h4{
     font-size: 18px;
-    color: white;
+    color: var(--white);
     font-weight: 700;
     padding-bottom: 20px;
 }
@@ -131,12 +131,12 @@
 
     border: none;
     border-radius: 20px;
-    background-color: #ffc772;
+    background-color: var(--btn-primary);
     cursor: pointer;
     transition: all .2s;
 }
 .btns-plano button:hover{
-    background-color: #b84d01;
+    background-color: var(--btn-secundary-hover);
 }
 /* PASSAPORTE */
 .passaporte{
