--- a/css/acessorios.css
+++ b/css/acessorios.css
@@ -89,8 +89,8 @@
     font-size: 16px;
     color: var(--black);
 
-    border:  1px solid var(--btn-yellow);
-    background-color: var(--btn-yellow);
+    border:  1px solid var( --btn-primary);
+    background-color: var( --btn-primary);
 
     cursor: pointer;
     transition: all .2s;
