--- a/css/claro-tv.css
+++ b/css/claro-tv.css
@@ -124,9 +124,9 @@
     font-size: 16px;
     color: var(--blacktotal);
     font-weight: 700;
-    border: 1px solid var(--btn-yellow);
+    border: 1px solid var( --btn-primary);
 
-    background-color: var(--btn-yellow);
+    background-color: var( --btn-primary);
     cursor: pointer;
     transition: all .2s;
 }
