--- a/css/smartphones.css
+++ b/css/smartphones.css
@@ -109,7 +109,7 @@
 
     font-size: 14px;
     color: var(--black);
-    background-color: var(--btn-yellow);
+    background-color: var( --btn-primary);
     transition: all .2s;
 
     cursor: pointer;
@@ -185,8 +185,8 @@
     font-size: 16px;
     color: var(--black);
     font-weight: 700;
-    background-color: var(--btn-yellow);
-    border: var(--btn-yellow);
+    background-color: var( --btn-primary);
+    border: var( --btn-primary);
 
     cursor: pointer;
     transition: all .2s;
